--- a/style.css
+++ b/style.css
@@ -27,3 +27,39 @@
   width: 100%;
   height: 150px;
 }
+
+#div5 {
+  background-color: red;
+  width: 100%;
+  height: 150px;
+}
+
+#div6 {
+  background-color: blue;
+  width: 100%;
+  height: 150px;
+}
+
+#div7 {
+  background-color: green;
+  width: 100%;
+  height: 150px;
+}
+
+#div8 {
+  background-color: yellow;
+  width: 100%;
+  height: 150px;
+}
+
+#div9 {
+  background-color: yellow;
+  width: 100%;
+  height: 150px;
+}
+
+#div10 {
+  background-color: yellow;
+  width: 100%;
+  height: 150px;
+}
